a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_rapoport/invalidtype3.min
# Can't use uninitialized vars

var x : string;

print x + four;
